--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="details_statut_title">Statut:</string>
     <string name="details_price_title">Price:</string>
     <string name="details_address_title">Address:</string>
+    <string name="details_city_title">City:</string>
     <string name="details_images_title">Images:</string>
     <string name="details_description_title">Description:</string>
     <string name="details_surface_title">Surface:</string>
