--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,11 +25,26 @@
     <string name="create_photo_txt_hint">Add Short Description here</string>
     <string name="create_add_short_txt_button">Valid the text</string>
 
+    <!--  MODIFY  -->
+    <string name="modify_submit_button">Modify estate</string>
+
     <!-- SPINNER-->
     <string-array name="statut_array">
         <item>On sale</item>
         <item>Sold</item>
     </string-array>
 
+    <!--  TEXTAUTOCOMPLETE  -->
+    <string-array name="type_array">
+        <item>Loft</item>
+        <item>Duplex</item>
+        <item>Penthouse</item>
+        <item>Openspace</item>
+    </string-array>
+
+    <string-array name="city_array">
+        <item>Brooklyn</item>
+        <item>Manhatann</item>
+    </string-array>
 
 </resources>
